--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "firebase-admin": "^8.9.0",
     "lodash": "^4.17.15",
     "socket.io": "^2.2.0"
   },
