--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:5000/",
   "dependencies": {
+    "@material-ui/core": "^4.8.0",
     "firebase": "^7.6.1",
     "js-sha256": "^0.9.0",
     "react": "^16.12.0",
