--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
+    "postbuild": "rsync -a build/ dist/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
