--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
     "client": "cd client && yarn start",
     "server": "nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "firebase-admin": "^8.9.0",
+    "jest": "^29.7.0",
     "js-sha256": "^0.9.0",
     "lodash": "^4.17.15",
     "socket.io": "^2.2.0"
