--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "firebase-admin": "^8.9.0",
-    "jest": "^29.7.0",
     "js-sha256": "^0.9.0",
     "lodash": "^4.17.15",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
-    "concurrently": "^4.0.1"
+    "concurrently": "^4.0.1",
+    "jest": "^29.7.0"
   }
 }
