--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase-admin": "^8.9.0",
     "js-sha256": "^0.9.0",
     "lodash": "^4.17.15",
+    "node-html-parser": "^6.1.11",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
