--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
     "express": "^4.17.1",
     "firebase-admin": "^8.9.0",
     "js-sha256": "^0.9.0",
+    "link-preview-generator": "^1.1.0",
     "lodash": "^4.17.15",
-    "node-html-parser": "^6.1.11",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
-    "concurrently": "^4.0.1",
-    "jest": "^29.7.0"
+    "concurrently": "^4.0.1"
   }
 }
