--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "express": "^4.17.1",
     "firebase-admin": "^8.9.0",
     "js-sha256": "^0.9.0",
+    "link-preview-js": "^3.0.5",
     "lodash": "^4.17.15",
-    "node-html-parser": "^6.1.11",
+    "node-html-parser": "^6.1.13",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
