--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^4.8.0",
     "@material-ui/icons": "^4.5.1",
+    "classnames": "^2.5.1",
     "firebase": "^7.6.1",
     "js-sha256": "^0.9.0",
     "react": "^16.12.0",
